deploydev.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-project

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-project

  template:

    metadata:
      labels:
        app: devops-project

    spec:

      containers:

      - name: website

        image: 03ayesha/devops-project:v1

        ports:

        - containerPort: 80
