ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-ingress

spec:

  rules:

  - host: myapp.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: devops-service

            port:

              number: 80
